--- a/h2.html
+++ b/h2.html
@@ -59,7 +59,7 @@
 
                 <div>
                   <br />
-                  <button class="btn btn-primary btn-lg active" aria-pressed="true" value="False" onclick="slide(value)">Continue</button>
+                  <a class="btn btn-primary btn-lg" href="h3.html" role="button">Continue</a>
                 </div>
               </div>
             </div>
