mengahpus salah satu batton masuk

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <p id="judul" class="display-4">Welcome to My Taste Restaurant</p>
           <p>Menyediakan berbagai menu makanan bintang lima dengan cita rasa luar biasa. Pelanggan kenyang, Kami pun senang :)</p>
           <br />
-          <a class="btn btn-primary btn-lg" href="h2.html" role="button">Masuk</a><button class="btn btn-primary btn-lg active" aria-pressed="true" value="True" onclick="slide(value)">Masuk</button>
+          <a class="btn btn-primary btn-lg" href="h2.html" role="button">Masuk</a>
         </div>
       </div>
     </div>
