--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                   <img src="aset/1.jpg" class="d-block w-100" alt="..." id="gambar" />
                 </div>
                 <div class="carousel-item">
-                  <img src="aset/3.jpg" class="d-block w-100" alt="..." id="gambar" />
+                  <img src="aset/3.JPG" class="d-block w-100" alt="..." id="gambar" />
                 </div>
                 <div class="carousel-item">
                   <img src="aset/8.jpg" class="d-block w-100" alt="..." id="gambar" />
